k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: financial-manager
  labels:
    name: financial-manager
